syntax = "proto3";

option java_package = "io.openmarket.account.grpc";


message RegistrationRequest {
    string username = 1;
    string password = 2;
    string displayName = 3;

}

message RegistrationResult {
    enum Status {
       REGISTER_SUCCESS = 0;
       USERNAME_ALREADY_EXIST = 1;
    }

    Status registerStatus = 1;
}